--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint 'src/**/*{.js,.jsx,.ts,.tsx}'",
+    "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
     "next": "12.3.1",
