--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "^8.0.1",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
@@ -27,7 +28,9 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
+    "postcss": "^8.4.17",
     "prettier": "2.7.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "*"
   }
 }
