--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "run-p dev:*",
+    "dev:next": "next dev",
+    "dev:path": "pathpida --watch",
+    "build": "pathpida && next build",
     "start": "next start",
     "lint": "eslint 'src/**/*{.js,.jsx,.ts,.tsx}'",
     "lint:fix": "yarn lint --fix"
@@ -28,6 +30,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
+    "npm-run-all": "^4.1.5",
+    "pathpida": "^0.18.1",
     "postcss": "^8.4.17",
     "prettier": "2.7.1",
     "tailwindcss": "^3.1.8",
