--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
