--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.8",
+    "axios": "^0.27.2",
     "next": "12.3.1",
+    "next-http-proxy-middleware": "^1.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
