--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.8",
+    "@supabase/supabase-js": "^1.35.7",
     "axios": "^0.27.2",
     "next": "12.3.1",
     "next-http-proxy-middleware": "^1.2.4",
